practice submit event

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <!--인터넷 익스플로러와 같이 옛날 버전의 브라우저를 지원할 때 사용하는 태그-->
@@ -8,7 +9,13 @@
     <link rel="stylesheet" href="style.css">
     <title>Momentum</title>
 </head>
+
 <body>
+    <form id="login-form">
+        <input required maxlength="15" type="text" placeholder="What is yard name?" />
+        <input type="submit" value="log In" />
+    </form>
     <script src="app.js"></script>
 </body>
+
 </html>
